fix: prevent scroll bar layout shift

--- a/src/styles/globals.css
+++ b/src/styles/globals.css
@@ -30,3 +30,7 @@
 body {
   background: var(--color-shape-4);
 }
+
+html {
+  scrollbar-gutter: stable;
+}
